--- a/D23.csproj
+++ b/D23.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>Android:13</UnityBuildTarget>
     <UnityVersion>2017.2.0f3</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -219,9 +221,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Animator\GridDrop.cs" />
     <Compile Include="Assets\Scripts\Bean\GameData.cs" />
     <Compile Include="Assets\Scripts\Bean\GridBean.cs" />
     <Compile Include="Assets\Scripts\Bean\MyWindowData.cs" />
+    <Compile Include="Assets\Scripts\SceneEditor\EditorObjManager.cs" />
+    <Compile Include="Assets\Scripts\SceneEditor\SceneEditor.cs" />
+    <Compile Include="Assets\Scripts\Test\DropTest.cs" />
+    <Compile Include="Assets\Scripts\UIManager\GameObjManager.cs" />
     <Compile Include="Assets\Scripts\UIManager\GridUI.cs" />
     <Compile Include="Assets\Scripts\Utils\JsonUtil.cs" />
   </ItemGroup>
